Adding new pics.

--- a/index.html
+++ b/index.html
@@ -36,5 +36,7 @@
   <!-- Use the following to set up new Junkwaves... -->
   <div class="junkwave global"></div>
 
+  <div class="junkwave global"></div>
+
   
   <div id="debug">debug</div>
