--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         border  : 1px solid black;
         width   : 400px;
         height  : 400px;
+        margin  : 0 auto;
       }
     #debug
       {
@@ -35,8 +36,5 @@
 
   <!-- Use the following to set up new Junkwaves... -->
   <div class="junkwave global"></div>
-
-  <div class="junkwave global"></div>
-
   
   <div id="debug">debug</div>
